# GenTrip

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/fixtures/: category_taxonomy.json  pois.json
backend/gentrip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: fetch_pois_osm.py  generate_pois_fixture.py  verify_taxonomy_samples.py
backend/src/: config.py  main.py
backend/src/abstracts/: __init__.py  embedder.py  llm_client.py  poi_repository.py  template_repo.py  vector_store.py
backend/src/api/: routes.py  schemas.py
backend/src/db/: postgres.py  redis.py  vector_store.py
backend/src/embedding/: bge_embedder.py
backend/src/graph/: plan_graph.py  router.py  state.py
backend/src/graph/nodes/: adapt_template.py  constraint_extract.py  feedback.py  full_generate.py  intent_parse.py  match_score.py  poi_retrieve.py  render_output.py  (+5 more)
backend/src/llm/: client.py  constraint_extract_llm.py  exceptions.py  schemas.py
backend/src/mocks/: poi_store.py
backend/src/models/: __init__.py  constraints.py  intent.py  poi.py  retrieval.py  route.py  template.py
backend/src/services/: category_taxonomy.py  constraint_rules.py  constraint_service.py  plan_service.py  poi_query_parser.py  poi_retrieval.py
backend/src/tools/: distance_estimate.py  poi_search.py  weather.py
backend/tests/: conftest.py  taxonomy_sample_cases.py  test_category_taxonomy.py  test_constraint_rules.py  test_constraint_service.py  test_health.py  test_initial_state.py  test_plan_cold_path.py  test_poi_retrieval.py  test_taxonomy_samples.py
(+19 files in other folders)
